# msp-onboard

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  msp.service
docs/: CMakeLists.txt  Doxyfile.in
mavlink/v1.0/common/: common.h  version.h
msp/: CMakeLists.txt
msp/src/: main.cpp
remote/: run.sh
src/: CMakeLists.txt  main.cpp
src/include/: defines.h
src/lib/: helper.h
src/modules/controller/: CMakeLists.txt  controller.cpp  controller.h  controller_command.cpp  controller_def.h  controller_idle.cpp  controller_init.cpp  controller_mission.cpp  msp_vehicle.cpp  msp_vehicle.h  mspvehicle.cpp  mspvehicle.h
src/modules/dji/: CMakeLists.txt  dji_camera_gimbal_def.h  dji_linux_helpers.cpp  dji_linux_helpers.hpp  dji_mav_receiver.cpp  dji_mavlink.cpp  dji_mavlink.h  dji_mission.cpp  dji_mission_interface.cpp  dji_mission_interface.h  dji_mobileComm.cpp  dji_mobileComm.h  dji_mobile_interface.cpp  dji_mobile_interface.h  dji_mspvehicle.cpp  dji_mspvehicle.h  dji_vehicle.cpp  dji_vehicle.h
src/modules/mavlink/: CMakeLists.txt  mav_command.cpp  mav_command.h  mav_ftp.cpp  mav_ftp.h  mav_ftp_protocol.h  mav_mavlink.cpp  mav_mavlink.h  mav_mavlink_udp.cpp  mav_mavlink_udp.h  mav_message.cpp  mav_message.h  mav_mission.cpp  mav_mission.h  mav_receiver.cpp  mav_service.h  mavlink_bridge_header.h
src/modules/sensors/: CMakeLists.txt  sensor_def.h  sensors.cpp  sensors.h
src/modules/sensors/bmp280/: CMakeLists.txt  bmp280.c  bmp280.h  bmp280_defs.h  bmp280i2c.c  bmp280i2c.cpp  bmp280i2c.h
